--- a/index.html
+++ b/index.html
@@ -1,12 +1,412 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Furniture Website</title>
+    <title>Furniture Store Webiste</title>
+
+    <!-- Style Css Link -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <!-- Style Css Link -->
+
+    <!-- Font Awesome Cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Font Awesome Cdn -->
+
 </head>
 <body>
-    
+
+    <!-- Header Start -->
+    <div class="header">
+        <nav>
+            <input type="checkbox" id="show-search">
+            <input type="checkbox" id="show-menu">
+            <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
+            <div class="content">
+                <div class="logo"><a href="index.html"><img src="./assets/img/logo2.png" alt=""></a></div>
+
+                <ul class="links">
+                    <li><a href="#" id="first">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#product">Products</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#review">Reviews</a></li>
+                </ul>
+            </div>
+            <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
+            <form action="#" class="search-box">
+                <input type="text" placeholder="Search" required>
+                <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
+            </form>
+
+        </nav>
+    </div>
+    <!-- Header End -->
+
+
+
+
+
+    <!-- Home Section Start -->
+    <div class="home">
+        <div class="main-text">
+            <h1>Discover The Best Furniture Store For You</h1>
+            <h3>Experience exceptional quality, impeccable design, and personalized service.</h3>
+            <h3>Transform your space with our wide selection of stylish and functional furniture pieces.</h3>
+            <button id="btn">View More</button>
+        </div>
+    </div>
+    <!-- Home Section End -->
+
+
+
+
+
+    <!-- Top Section Card Start -->
+    <section class="offers">
+        <div class="offer-content">
+            <div class="row">
+                <i class="fa-solid fa-truck-fast"></i>
+                <h3>Free Delivery</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="row">
+                <i class="fa-solid fa-headset"></i>
+                <h3>Support 24/7</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="row">
+                <i class="fa-solid fa-rotate-left"></i>
+                <h3>30 Day Return</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="row">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <h3>Secure Shopping</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Top Section Card End -->
+
+
+
+
+
+    <!-- About Section Start -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="./assets/img/about-img.png" alt="">
+        </div>
+        <div class="about-text">
+            <h3>Furniture Store service About us</h3>
+            <p>At our Furniture Store, we pride ourselves on providing exceptional service to our valued customers. With years of experience in the industry, we understand the importance of creating a seamless shopping experience and delivering high-quality furniture that exceeds your expectations..</p>
+
+            <button id="about-btn">Read More...</button>
+        </div>
+        
+    </section>
+    <!-- About Section End -->
+
+
+
+
+
+    <!-- Product Section Start -->
+    <section class="product" id="product">
+        <div class="main-txt">
+            <h3>Products</h3>
+        </div>
+        <div class="card-content">
+            <div class="row">
+                <img src="./assets/img/p1.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p2.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p3.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p4.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-content">
+            <div class="row">
+                <img src="./assets/img/p5.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p6.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p7.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p8.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Product Section End -->
+
+
+
+
+
+    <!-- Banner Start -->
+    <div class="banner">
+        <div class="banner-content">
+            <h5>Get Discount Up To 50%</h5>
+            <h3>Best Deal For Weak</h3>
+            <p>Get up to 50% off this weak and get offer <br>Don't miss</p>
+            <button><a href="#products">Order</a></button>
+        </div>
+    </div>
+    <!-- Banner End -->
+
+
+
+
+
+
+    <!-- Sale Products Start -->
+    <section class="product" id="products" style="margin-top: 50px;">
+        <div class="main-txt">
+            <h3>50% off products</h3>
+        </div>
+        <div class="card-content">
+            <div class="row">
+                <img src="./assets/img/p9.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p10.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p11.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+            <div class="row">
+                <img src="./assets/img/p12.png" alt="">
+                <div class="card-body">
+                    <h3>Chair</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h5>Price $999</h5>
+                    <button>Order Now</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Sale Products End -->
+
+
+
+
+
+    <!-- Our Gallary Start -->
+    <div class="gallary">
+        <h3>Our Gallary</h3>
+        <div class="gallary-img">
+            <div class="img1">
+                <img src="./assets/img/g1.png" alt="">
+            </div>
+            <div class="img1">
+                <img src="./assets/img/g2.png" alt="">
+                <img src="./assets/img/g3.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Our Gallary End -->
+
+
+
+
+
+    <!-- Contact Section Start -->
+    <section class="contact" id="contact">
+        <div class="content-text">
+            <h2>Get In <span>Touch</span></h2>
+            <p>Don't hesitate to reach out to us. We value your feedback and are here to provide you with an exceptional experience.</p>
+            <p>We look forward to assisting you and helping you find the perfect furniture solutions for your needs. Let's establish a personal connection and collaborate in the creation of the home of your dreams.</p>
+            <div class="list">
+                <li><a href="#">+50498171316</a></li>
+                <li><a href="#">FurnitureStore@gmail.com</a></li>
+                <li><a href="#">Edificio Torre Morazan Tegucigalpa</a></li>
+            </div>
+        </div>
+
+        <div class="contact-form">
+            <form action="#">
+                <input type="name" placeholder="Name" required>
+                <input type="number" placeholder="Phone" required>
+                <input type="email" placeholder="Email" required>
+                <textarea name="" id="" cols="35" rows="10" placeholder="Message"></textarea>
+                <input type="submit" value="Send" class="submit" required>
+
+            </form>
+        </div>
+
+    </section>
+    <!-- Contact Section End -->
+
+
+
+
+
+    <!-- Review Section Start -->
+    <section class="review" id="review">
+        <div class="main-txt">
+            <h3>Customers <span>Review</span></h3>
+        </div>
+
+        <div class="review-content">
+        <div class="box">
+        <div class="img">
+            <img src="./assets/img/pic-1.png" alt="">
+        </div>
+        <h3>John M</h3>
+        <div class="star">
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+        </div>
+        <p>"I had been searching for a dining table that perfectly matched my style and budget. Thanks to this furniture store, I found exactly what I was looking for. The process was seamless, and the delivery was prompt. The table looks stunning in my dining room, and I've received so many compliments. Thank you!"</p>
+
+    </div>
+        <div class="box">
+        <div class="img">
+            <img src="./assets/img/pic-2.png" alt="">
+        </div>
+        <h3>Emily S</h3>
+        <div class="star">
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+        </div>
+        <p>"I had a fantastic experience shopping at this furniture store. The staff was friendly and knowledgeable, guiding me through the selection process. The furniture options were varied and of high quality. I appreciate the attention to detail and the exceptional service provided. I will definitely be returning for my future furniture needs." </p>
+
+    </div>
+        <div class="box">
+        <div class="img">
+            <img src="./assets/img/pic-3.png" alt="">
+        </div>
+        <h3>Michael T</h3>
+        <div class="star">
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+            <i class="fa-solid fa-star checked"></i>
+        </div>
+        <p>"I couldn't be happier with my purchase from this furniture store. The entire process, from browsing the website to the delivery, was smooth and hassle-free. The furniture arrived in perfect condition, and it exceeded my expectations in terms of both design and comfort. I highly recommend this store to anyone in search of beautiful furniture pieces." </p>
+
+    </div>
+
+</div>
+
+    </section>
+    <!-- Review Section End -->
+
+
+
+
+
+    <!-- Footer Start -->
+    <footer id="footer">
+        <div class="footer-content">
+            <div class="logo">
+                <img src="./assets/img/logo2.png" alt="">
+            </div>
+
+            <p>Our passion for design and quality drives us to provide you with the best furniture options to create exceptional spaces
+                <br>Discover our commitment to excellence and let us assist you in transforming your home into a unique and inviting place
+            </p>
+            <div class="socail-links">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-bottom-content">
+            <p>Designed By <a href="#">MonDev</a></p>
+            <div class="copyright">
+                <p>&copy;Copyright <strong>Furniture Store</strong>.All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer End -->
+    <a href="#" class="arrow"><i><img src="./assets/img/up-arrow.png" alt="" width="50px"></i></a>
+
 </body>
 </html>
